feat: init test file structure

--- a/tdd-card-validator/package.json
+++ b/tdd-card-validator/package.json
@@ -2,10 +2,14 @@
   "name": "tdd-card-validator",
   "version": "1.0.0",
   "description": "Praktyka TDD na przykładzie zadania z walidacją karty płatniczej\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[1;6D\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[D",
-  "main": "index.js",
+  "main": "getCardProvider.js",
   "scripts": {
     "test": "jest"
   },
   "author": "azinko",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {},
+  "dependencies": {
+    "jest": "^25.2.6"
+  }
 }
